@@ -4,14 +4,14 @@ public class Reference
 {
     public static final String MOD_ID = "SavageCore";
     public static final String MOD_NAME = "Savage Core";
-    public static final String VERSION = "1.7.10-0.1";
+    public static final String VERSION = "1.7.10-0.2";
 
     public static final String CLIENT_PROXY = "com.savageboy74.savagecore.client.proxy.ClientProxy";
     public static final String SERVER_PROXY = "com.savageboy74.savagecore.common.proxy.CommonProxy";
 
     public static final String GUI_FACTORY_CLASS = "com.savageboy74.savagecore.client.gui.GuiFactory";
 
-    public static final int UPDATE_NUMBER = 1;
+    public static final int UPDATE_NUMBER = 2;
     public static String UPDATES = "";
     public static boolean OUTDATED = false;
 
