@@ -5,8 +5,8 @@
   "description": "Core mod for savageboy74's mods",
   "version": "${version}",
   "mcversion": "${mcversion}",
-  "url": "",
-  "updateUrl": "",
+  "url": "https://savageboy74.tv/mods/savagecore/",
+  "updateUrl": "https://savageboy74.tv/mods/savagecore/",
   "authorList": ["savageboy74"],
   "credits": "iChun and Pahimar <3",
   "logoFile": "",
