@@ -1,3 +1,6 @@
 Changelog:
+
+	Build 0.2:
+		savageboy74: Added Command and String Helper. Getting ready for more implementation.
 	Build 0.1:
 		savageboy74: Initial commit, Added ConfigHandler, Added core components
